Move to light version (no physics)

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <script src="js/vendor/whitestorm/three.js"></script>
     <script src="js/vendor/whitestorm/physi.js"></script>
     -->
-    <script src="js/vendor/whitestorm/whs.preload.js"></script>
-    <script src="js/vendor/whitestorm/whitestorm.js"></script>
+    <script src="js/vendor/whitestorm/whitestorm.light.js"></script>
     <script src="js/vendor/gsap/TweenMax.min.js"></script>
     <script src="js/vendor/gsap/TimelineMax.min.js"></script>
 
